# translation-service

./: Dockerfile  README.md  __main__.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
