[tool.poetry]
name = "translation service"
version = "0.1.0"
description = ""
authors = ["Augusto de P. Júlio <augusto.juliogec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = "^0.24.0.post1"
psycopg2-binary = "^2.9.9"
fastapi-pagination = "^0.12.13"
sqlalchemy = "^2.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
